[package]
name = "sm_bridge"
version = "0.1.1"
edition = "2024"
description = "SevenMark Renderer And WYSIWYG Engine"
license = "MIT"
authors = ["Naekkori"]

[dependencies]
sevenmark-parser = { version = "2.20.5", features = ["include_locations"] }
sevenmark-html = "2.20.5"
sevenmark-utils = "2.20.5"
wasm-bindgen = "0.2.108"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4.0"
calamine = "0.33.0"
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.85"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "HtmlTextAreaElement",
    "HtmlDivElement",
    "HtmlButtonElement",
    "Node",
    "Window",
    "console",
    "Event",
    "InputEvent",
    "Selection",
    "Range",
    "TreeWalker",
    "NodeFilter",
    "HtmlCollection",
    "HtmlHeadElement",
    "HtmlScriptElement",
]

[profile.release]
opt-level = "s"
lto = true

[lib]
crate-type = ["cdylib", "rlib"]
