[package]
name = "sevenmark-html"
version = "2.13.1"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/sevenwiki/sevenmark"
edition = "2021"
rust-version = "1.81.0"
description = "HTML renderer for SevenMark AST"

[dependencies]
# Internal
sevenmark-parser = { path = "../sevenmark-parser" }

# HTML rendering
maud = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
