[package]
name = "sevenmark-parser"
version = "2.12.22"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/sevenwiki/sevenmark"
edition = "2021"
rust-version = "1.81.0"
description = "sevenmark/parser"

[dependencies]
winnow = { version = "0.7.14", features = ["simd"] }
line-span = "0.1.5"
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
default = []
include_locations = []

[[test]]
name = "comprehensive_parser_tests"
required-features = ["include_locations"]
