[package]
name = "sevenmark-transform"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "sevenmark/transform"

[dependencies]
# Internal
sevenmark-parser = { workspace = true }

# Shared
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# WASM (optional)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
default = []
wasm = [
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "sevenmark-parser/include_locations",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "codemirror_tests"
required-features = ["sevenmark-parser/include_locations"]
